Added embedded-neo4j and demonstrate use in sample.